# vyatta-strongswan

./: .frlog  .gitignore  Android.mk  CHANGES  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.inc  Makefile.ver  NEWS  README  aclocal.m4  configure  configure.in
.pc/: applied-patches
debian/: NEWS  README.Debian  changelog  control  copyright  doc-base  libstrongswan.dirs  libstrongswan.install  libstrongswan.lintian-overrides  lintian-overrides  linux-patch-strongswan.dirs  linux-patch-strongswan.unpatch  openswan.postinst  openswan.templates.master  rules  strongswan-ikev1.install  strongswan-ikev2.install  strongswan-modules-source.rules  strongswan-nm.dirs  strongswan-nm.install  strongswan-starter.config  strongswan-starter.dirs  strongswan-starter.install  strongswan-starter.ipsec.init  strongswan-starter.lintian-overrides  strongswan-starter.postinst  strongswan-starter.postrm  strongswan-starter.templates  strongswan.config  strongswan.dirs  strongswan.docs  strongswan.init  strongswan.lintian-overrides  strongswan.postinst  strongswan.postrm  strongswan.prerm  strongswan.templates  strongswan.templates.master  svn-deblayout  use-bash1.diff
init/: Makefile.in
lib/: Makefile
man/: Makefile.in  ipsec.conf.5  ipsec.conf.5.in  ipsec.secrets.5  strongswan.conf.5  strongswan.conf.5.in
programs/: Makefile  Makefile.program
scripts/: Makefile.am  Makefile.in  crypt_burn  fetch  oid2der
src/: Makefile.am  Makefile.in
src/rsasigkey/: Makefile.am  rsasigkey  rsasigkey.c
testing/: INSTALL  Makefile.in  README  do-tests  do-tests.in  make-testing  (+3 more)
(+1162 files in other folders)
